新增搜狗验证

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta name="description" content="{{ site.blog.title }}">
   <meta name="author" content="{{ site.author.name }}">
+  <meta name="sogou_site_verification" content="Dvhrt7OqDj"/>
   {% if page.index == true %}<meta name="keywords" content="{{ site.blog.title }}, {{ site.blog.name }}, {{ site.blog.description }}, {{ site.author.name }}">{% else %}<meta name="keywords" content="{{ page.title }}, {{ site.blog.name }}, {{ site.author.name }}">{% endif %}
   {% if page.index == true %}<title>{{ site.blog.title }}</title>{% else %}<title>{{ page.title }} - {{ site.blog.name }}</title>{% endif %}
   {% if page.index == true %}<link rel="canonical" href="{{ site.blog.url }}">{% else %}<link rel="canonical" href="{{ site.blog.url }}{{ page.url }}">{% endif %}
