--- a/_layouts/life.html
+++ b/_layouts/life.html
@@ -18,7 +18,7 @@
 <body>
   <div class="main">
     <div class="title">{{ page.title }}</div>
-    {% if page.meta != false %}<div class="post-info"><i class="fa fa-clock-o"></i>&nbsp;{{ page.date | date: "%Y" }}-{{ page.date | date: "%m" }}-{{ page.date | date: "%d" }}最近更新时间：{{site.time}} 转载请注明出处：http://qingyu1229.github.io/ </div>{% endif %}
+    {% if page.meta != false %}<div class="post-info"><i class="fa fa-clock-o"></i>&nbsp;{{ site.time | date: "%Y" }}-{{ site.time | date: "%m" }}-{{ site.time | date: "%d" }}最近更新时间：{{site.time}} 转载请注明出处：http://qingyu1229.github.io/ </div>{% endif %}
     <div class="content">
     {{ content }}
     </div>
