增加微博分享按钮

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:wb="http://open.weibo.com/wb">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/res/css/light.css">
   <link rel="stylesheet" href="/res/css/pygments.css">
   <script src="/res/js/light.js"></script>
+  <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
   {% include tongji.html %}
 </head>
 <body>
